# hypotenuse-campus-cpp

./: .gitignore  CMakeLists.txt  README.md  compare.cpp  reference_stats.txt  smart_test.cpp  test-50x50.png.xmp  timing.cpp
src/: boost_astar_defs.h  compare.cpp  main.cpp  open_space_shortest_path.h  open_spider.h  smart_corners.h  smart_graph.h  smart_test.cpp  spider.h  strict_spider.h  test.cpp  types.h  utils.h
